# ai-sql-chatbot

./: README.md  config_oidc.py  pyproject.toml  streamlit.py  styles.css  utils.py
.streamlit/: config.toml
prompts/: main_prompt.py  use_case_1.py  use_case_2.py
