[tool.poetry]
name = "ai-sql-chatbot"
version = "1.1.0"
description = ""
authors = ["Melisa Kocbas <melisa.kocbas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.12"
streamlit = "1.42.0"
streamlit-feedback = "0.1.4"
streamlit-extras = "0.5.5"
openai = "1.64.0"
pandas = "2.2.3"
pytz = "2024.2"
snowflake = "1.0.5"
boto3 = "1.37.1"
botocore = "1.37.1"
python-dotenv = "^1.0.1"
fastapi = "^0.115.5"
watchdog = "^5.0.0"
sqlalchemy = "^2.0.36"
ijson = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
